updated legacy warning

--- a/js/app/i18n/locales/en.json
+++ b/js/app/i18n/locales/en.json
@@ -258,13 +258,13 @@
         "PRICING_ADD_RULE_PER_TASK": "Add rule per point (advanced)",
         "RULE_TARGET_DELIVERY": "Apply once per order if:",
         "RULE_TARGET_TASK": "Apply per each point (PICKUP and/or DROPOFF task) if:",
-        "RULE_LEGACY_TARGET_DYNAMIC": "Standard deliveries (one pickup, one dropoff): apply once per order; Multi-point deliveries: apply per each point (PICKUP and/or DROPOFF task) if:",
+        "RULE_LEGACY_TARGET_DYNAMIC": "Simple deliveries (one pickup, one dropoff): apply once per order; Multi-point deliveries: apply per each point (PICKUP and/or DROPOFF task) if:",
         "RULE_LEGACY_TARGET_DYNAMIC_HELP": "This rule is deprecated in favor of separate rules applied either once per order or per each point. Please consider migrating to the new format. (See the migration guide above)",
-        "RULE_LEGACY_TARGET_DYNAMIC_MIGRATE_RATIONALE": "This pricing scheme contains rules applied differently for Standard deliveries (one pickup and one dropoff) and Multi-point deliveries, making them error-prone. Thus, the usage of such rules is discouraged. Please consider migrating to the new format:",
-        "RULE_LEGACY_TARGET_DYNAMIC_MIGRATE_TARGET_DELIVERY": "Switch to Apply rules once per order",
-        "RULE_LEGACY_TARGET_DYNAMIC_MIGRATE_TARGET_DELIVERY_HELP": "(choose this option if you use this pricing scheme for Food Tech orders or Standard deliveries (one pickup and one dropoff))",
-        "RULE_LEGACY_TARGET_DYNAMIC_MIGRATE_TARGET_TASK": "Switch to Apply rules per each point (PICKUP and/or DROPOFF task)",
-        "RULE_LEGACY_TARGET_DYNAMIC_MIGRATE_TARGET_TASK_HELP": "(choose this option if you use this pricing scheme for Multi-point deliveries)",
+        "RULE_LEGACY_TARGET_DYNAMIC_MIGRATE_RATIONALE": "This pricing scheme contains deprecated rules applied differently for simple deliveries (one pickup, one dropoff) and complex, multi-point deliveries, making them error-prone. Thus, the usage of such rules is discouraged. Please consider migrating to the new format:",
+        "RULE_LEGACY_TARGET_DYNAMIC_MIGRATE_TARGET_DELIVERY": "Switch to: Apply rules once per order",
+        "RULE_LEGACY_TARGET_DYNAMIC_MIGRATE_TARGET_DELIVERY_HELP": "(choose this option if you use this pricing scheme for Food Tech orders or simple deliveries (one pickup, one dropoff))",
+        "RULE_LEGACY_TARGET_DYNAMIC_MIGRATE_TARGET_TASK": "Switch to: Apply rules per each point (PICKUP and/or DROPOFF task)",
+        "RULE_LEGACY_TARGET_DYNAMIC_MIGRATE_TARGET_TASK_HELP": "(choose this option if you use this pricing scheme for complex, multi-point deliveries)",
         "RULE_PICKER_ADD_CONDITION": "Add condition",
         "RULE_PICKER_LINE_DISTANCE": "Distance (km)",
         "RULE_PICKER_LINE_WEIGHT": "Weight (kg)",
