added help text for Add rule buttons

--- a/js/app/i18n/locales/en.json
+++ b/js/app/i18n/locales/en.json
@@ -254,8 +254,10 @@
         "ORDER_TIMELINE_AFTER_CREATED_DESCRIPTION": "The restaurant has to confirm your order. In case of refusal no amount will be debited from your card",
         "ORDER_TIMELINE_AFTER_PICKED_TITLE": "The courier is coming!",
         "ORDER_TIMELINE_AFTER_PICKED_DESCRIPTION": "Get ready!",
-        "PRICING_ADD_RULE": "Add rule (standard)",
+        "PRICING_ADD_RULE": "Add rule per order",
+        "PRICING_ADD_RULE_HELP": "Add a rule to be applied once per order, recommended for simple deliveries (one pickup, one dropoff) and Food Tech orders",
         "PRICING_ADD_RULE_PER_TASK": "Add rule per point (advanced)",
+        "PRICING_ADD_RULE_PER_TASK_HELP": "Add a rule to be applied per each point (PICKUP and/or DROPOFF task), recommended for complex, multi-point deliveries",
         "RULE_TARGET_DELIVERY": "Apply once per order if:",
         "RULE_TARGET_TASK": "Apply per each point (PICKUP and/or DROPOFF task) if:",
         "RULE_LEGACY_TARGET_DYNAMIC": "Simple deliveries (one pickup, one dropoff): apply once per order; Multi-point deliveries: apply per each point (PICKUP and/or DROPOFF task) if:",
