--- a/js/app/i18n/locales/en.json
+++ b/js/app/i18n/locales/en.json
@@ -36,6 +36,7 @@
         "ready": "Ready",
         "FEATURE_PREVIEW": "Preview",
         "DEPRECATED": "Deprecated",
+        "VIEW_DOCUMENTATION": "View documentation",
         "FEATURE_PREVIEW_HELP": "The feature is available for demonstration and test purposes but may not be documented and/or feature complete. Please contact us on Slack #dev channel if you have any questions or feedback.",
         "ADMIN_DEFAULT_DELETION_ERROR_MESSAGE": "Could not delete",
         "ADMIN_PLEASE_UNLINK_PACKAGE_SET_BEFORE_DELETION": "Could not delete. Please unlink this package set from stores or delivery forms it may apply",
@@ -254,6 +255,8 @@
         "ORDER_TIMELINE_AFTER_CREATED_DESCRIPTION": "The restaurant has to confirm your order. In case of refusal no amount will be debited from your card",
         "ORDER_TIMELINE_AFTER_PICKED_TITLE": "The courier is coming!",
         "ORDER_TIMELINE_AFTER_PICKED_DESCRIPTION": "Get ready!",
+        "PRICING_PRICING_RULE_HELP": "Rules to calculate the price of the order",
+        "PRICING_PRICING_RULE_DOCS_PATH": "/en/admin/pricing_rule/",
         "PRICING_ADD_RULE": "Add rule per order",
         "PRICING_ADD_RULE_HELP": "Add a rule to be applied once per order, recommended for simple deliveries (one pickup, one dropoff) and Food Tech orders",
         "PRICING_ADD_RULE_PER_TASK": "Add rule per point (advanced)",
