link to docs using Symfony forms

--- a/translations/messages.en.yml
+++ b/translations/messages.en.yml
@@ -517,7 +517,9 @@ form.company.make_the_request.label: Send request
 pricing_rule_set.new: New pricing
 form.pricing_rule_set.name.label: Name
 form.pricing_rule_set.rules.label: Rules
+form.pricing_rule_set.rules.docs_path: /en/admin/pricing_rule/
 form.pricing_rule_set.strategy.label: Method of calculation
+form.pricing_rule_set.strategy.docs_path: /en/admin/pricing_method_of_calculation
 form.pricing_rule_set.strategy.help: The rules are evaluated from top to bottom. Depending
   on the the method of calculation selected, either the first rule that matches will
   decide the price, or the price will be calculated by adding up all the matching
