--- a/js/app/i18n/locales/en.json
+++ b/js/app/i18n/locales/en.json
@@ -273,7 +273,7 @@
         "RULE_PICKER_ADD_CONDITION": "Add condition",
         "RULE_PICKER_LINE_DISTANCE": "Distance (km)",
         "RULE_PICKER_LINE_WEIGHT_TARGET_DELIVERY": "Weight (kg) (total)",
-        "RULE_PICKER_LINE_WEIGHT_TARGET_TASK": "Weight (kg) (dropoff task)",
+        "RULE_PICKER_LINE_WEIGHT_TARGET_TASK": "Weight (kg) (use only with Type of task: Dropoff)",
         "RULE_PICKER_LINE_WEIGHT": "Weight (kg)",
         "RULE_PICKER_LINE_BIKE_TYPE": "Bike type",
         "RULE_PICKER_LINE_PICKUP_ADDRESS": "Pickup address",
@@ -283,7 +283,7 @@
         "RULE_PICKER_LINE_DROPOFF_DOORSTEP": "Doorstep dropoff",
         "RULE_PICKER_LINE_PACKAGES": "Packages",
         "RULE_PICKER_LINE_PACKAGES_TARGET_DELIVERY": "Packages (total)",
-        "RULE_PICKER_LINE_PACKAGES_TARGET_TASK": "Packages (dropoff task)",
+        "RULE_PICKER_LINE_PACKAGES_TARGET_TASK": "Packages (use only with Type of task: Dropoff)",
         "RULE_PICKER_LINE_ORDER_ITEMS_TOTAL": "Food Tech Order Items total",
         "RULE_PICKER_LINE_OPTGROUP_DELIVERY": "Delivery",
         "RULE_PICKER_LINE_OPTGROUP_DEPRECATED": "Deprecated",
@@ -438,7 +438,7 @@
         "ADMIN_DASHBOARD_RESCHEDULE": "Reschedule",
         "RULE_PICKER_LINE_VOLUME_UNITS": "Volume units",
         "RULE_PICKER_LINE_VOLUME_UNITS_TARGET_DELIVERY": "Volume units (total)",
-        "RULE_PICKER_LINE_VOLUME_UNITS_TARGET_TASK": "Volume units (dropoff task)",
+        "RULE_PICKER_LINE_VOLUME_UNITS_TARGET_TASK": "Volume units (use only with Type of task: Dropoff)",
         "RULE_PICKER_LINE_PICKUP_TIME_RANGE_LENGTH_HOURS": "Pickup time range length (hours)",
         "RULE_PICKER_LINE_DROPOFF_TIME_RANGE_LENGTH_HOURS": "Dropoff time range length (hours)",
         "OPTIN_CONSENT_NEWSLETTER_LABEL": "I agree to receive the {{brand}} newsletter",
