--- a/js/app/i18n/locales/pt_BR.json
+++ b/js/app/i18n/locales/pt_BR.json
@@ -33,7 +33,7 @@
         "ADMIN_DASHBOARD_ADD": "Adicionar",
         "ADMIN_DASHBOARD_DURATION": "Duração",
         "ADMIN_DASHBOARD_DROP_DELIVERIES": "Arraste entregas aqui",
-        "ADMIN_DASHBOARD_DISTANCE": "Distância",
+        "ADMIN_DASHBOARD_DISTANCE": "Distância: {{ distance }} kms",
         "ADMIN_DASHBOARD_ADDUSER_TO_PLANNING": "Adicionar ao planejamento",
         "ADMIN_DASHBOARD_DISPLAY": "Exibir",
         "ADMIN_DASHBOARD_CLICK_FOR_DETAILS": "Clique em um pedido para exibir detalhes",
