--- a/translations/messages.en.yml
+++ b/translations/messages.en.yml
@@ -1561,8 +1561,8 @@ payment_method:
   swile: Swile
   restoflash: Restoflash
 registration.navigation.title: "Personal account creation"
-registration.info.title: "What is CoopCycle?"
-registration.info.text: "On CoopCycle, you can order food provided by restaurants near you and delivered by your local cooperative. We are proud to be an ethical alternative to the uberization of our society!"
+registration.info.title: "What is %brandName%?"
+registration.info.text: "On %brandName%, you can order food provided by restaurants near you and delivered by your local cooperative. We are proud to be an ethical alternative to the uberization of our society!"
 registration.info.business.account.attachment: "You will be attached to the business account %businessAccountName%, but you can also command under your name."
 registration.alert.text: "You have been invited to create an account on %brandName% by %invitedBy%."
 registration.alert.business.account.text: "Welcome in CoopCycle - %brandName% ! Please create your business account before making your first order."
