changed: add rules per point at the beginning of the list

--- a/translations/messages.en.yml
+++ b/translations/messages.en.yml
@@ -521,10 +521,9 @@ form.pricing_rule_set.rules.label: Rules
 form.pricing_rule_set.rules.docs_path: /en/admin/pricing_rule/
 form.pricing_rule_set.strategy.label: Method of calculation
 form.pricing_rule_set.strategy.docs_path: /en/admin/pricing_method_of_calculation
-form.pricing_rule_set.strategy.help: The rules are evaluated from top to bottom. Depending
-  on the the method of calculation selected, either the first rule that matches will
-  decide the price, or the price will be calculated by adding up all the matching
-  rules.
+form.pricing_rule_set.strategy.help: The rules are evaluated from top to bottom, and 'Rules per point' are applied before 'Rules per order'.
+  Depending on the method of calculation selected, either the first rule that matches will decide the price,
+  or the price will be calculated by adding all the matching rules.
 form.pricing_rule_set.strategy.find.label: The first rule that matches
 form.pricing_rule_set.strategy.map.label: All the matching rules
 form.pricing_rule.price.label: Price
