added: display method of calculation

--- a/js/app/i18n/locales/en.json
+++ b/js/app/i18n/locales/en.json
@@ -255,6 +255,10 @@
         "ORDER_TIMELINE_AFTER_CREATED_DESCRIPTION": "The restaurant has to confirm your order. In case of refusal no amount will be debited from your card",
         "ORDER_TIMELINE_AFTER_PICKED_TITLE": "The courier is coming!",
         "ORDER_TIMELINE_AFTER_PICKED_DESCRIPTION": "Get ready!",
+        "PRICING_PRICING_RULE_SET_STRATEGY_LABEL": "Method of calculation",
+        "PRICING_PRICING_RULE_SET_STRATEGY_FIND_LABEL": "The first rule that matches",
+        "PRICING_PRICING_RULE_SET_STRATEGY_MAP_LABEL": "All the matching rules",
+        "PRICING_PRICING_RULE_SET_STRATEGY_UNKNOWN_LABEL": "Unknown",
         "PRICING_PRICING_RULE_HELP": "Rules to calculate the price of the order",
         "PRICING_PRICING_RULE_DOCS_PATH": "/en/admin/pricing_rule/",
         "PRICING_ADD_RULE": "Add rule per order",
