--- a/translations/messages.en.yml
+++ b/translations/messages.en.yml
@@ -1103,6 +1103,7 @@ order.export.heading.completed_by: Completed by
 order.export.heading.refund_total: Refunds
 order.export.heading.incident_adjustments: Incident adjustments
 order.export.heading.incidents: Incidents
+order.export.heading.payment_gateway: Payment gateway
 order.export.empty: There are no orders to export
 form.order_export.messenger.label: Add column with messenger who completed the order
 basics.show: Show
