clean: update translation string

--- a/translations/messages.fr.yml
+++ b/translations/messages.fr.yml
@@ -1252,12 +1252,12 @@ adminDashboard.nonprofits.confirm_delete: Êtes-vous sûr de supprimer cette ass
 restaurants.pre_order: Pré-commander
 restaurant.closedOpensTodayLaterWarning: Ce restaurant est fermé maintenant mais ouvre
   aujourd'hui à <strong>%time%</strong>.
-restaurant.canOrderForLater: Mais vous pouvez toujours commander pour plus tard !
+restaurant.canOrderForLater: Mais vous pouvez pré-commander !
 restaurant.closedOpensTomorrowWarning: Ce restaurant est fermé pour la journée mais
   ouvre demain à <strong>%time%</strong>.
-restaurant.canOrderForTomorrow: Vous pouvez toujours commander pour demain !
+restaurant.canOrderForTomorrow: Vous pouvez pré-commander pour demain !
 restaurant.closedOpensAfterTomorrowWarning: Ce restaurant est fermé jusqu'au <strong>%date%</strong>.
-restaurant.canOrderForOtherDay: Vous pouvez quand même commander pour ce jour-là !
+restaurant.canOrderForOtherDay: Vous pouvez pré-commander pour ce jour.
 restaurant.closedNowWarning: Ce restaurant est fermé actuellement.
 restaurant.form.section.en_boite_le_plat: En Boîte Le Plat
 restaurant.form.en_boite_le_plat_enabled.label: Activer le système de consigne En
