--- a/js/app/i18n/locales/fr.json
+++ b/js/app/i18n/locales/fr.json
@@ -666,6 +666,8 @@
         "ADMIN_ORDERS_TO_INVOICE_DESTINATION_STANDARD": "Standard (CSV)",
         "ADMIN_ORDERS_TO_INVOICE_DESTINATION_ODOO": "Odoo (CSV)",
         "VIEW": "Voir",
-        "SWITCH_BACK_TIMESLOTPICKER": "Returner au timeslot picker"
+        "SWITCH_BACK_TIMESLOTPICKER": "Returner au timeslot picker",
+        "PAYMENT_FORM_ERROR": "Désolé, nous n'avons pas pu procéder au paiement",
+        "TRY_AGAIN": "Réessayer"
     }
 }
