easier access to price debug tool for dispatchers

--- a/js/app/i18n/locales/en.json
+++ b/js/app/i18n/locales/en.json
@@ -685,6 +685,11 @@
         "DELIVERY_FORM_TOTAL_PRICE": "Total price",
         "DELIVERY_FORM_TOTAL_VAT": "Incl. VAT",
         "DELIVERY_FORM_TOTAL_EX_VAT": "Excl. VAT",
+        "DELIVERY_FORM_HOW_IS_PRICE_CALCULATED": "How is the price calculated?",
+        "DELIVERY_FORM_PRICE_CALCULATION_RULES": "Matched pricing rules",
+        "DELIVERY_FORM_PRICE_CALCULATION_CART": "Cart",
+        "DELIVERY_FORM_PRICE_CALCULATION_ORDER_ITEM_TOTAL": "Item Total",
+        "DELIVERY_FORM_PRICE_CALCULATION_ORDER_TOTAL": "Order Total",
         "DELIVERY_FORM_REMOVE_DROPOFF": "Remove this dropoff",
         "DELIVERY_FORM_SHOW_MORE" : "Show more",  
         "DELIVERY_FORM_SHOW_LESS" : "Show less",
