--- a/js/app/i18n/locales/en.json
+++ b/js/app/i18n/locales/en.json
@@ -687,6 +687,7 @@
         "DELIVERY_FORM_TOTAL_EX_VAT": "Excl. VAT",
         "DELIVERY_FORM_HOW_IS_PRICE_CALCULATED": "How is the price calculated?",
         "DELIVERY_FORM_PRICE_CALCULATION_RULES": "Matched pricing rules",
+        "DELIVERY_FORM_PRICE_CALCULATION_VIEW_PRICING_RULE_SET": "View pricing configuration",
         "DELIVERY_FORM_PRICE_CALCULATION_CART": "Cart",
         "DELIVERY_FORM_PRICE_CALCULATION_ORDER_ITEM_TOTAL": "Item Total",
         "DELIVERY_FORM_PRICE_CALCULATION_ORDER_TOTAL": "Order Total",
