--- a/js/app/i18n/locales/en.json
+++ b/js/app/i18n/locales/en.json
@@ -629,6 +629,7 @@
         "SELECT_THE_DATE_AND_TIME_OF_THE_INCIDENT": "Select the date and time of the incident.",
         "PLEASE_SELECT_A_DATE": "Please select a date",
         "OPEN": "Open",
+        "CLOSE": "CLOSE",
         "CLOSED": "Closed",
         "PLUS_ADD_TAGS": "+ Add tags",
         "TRANSPORTER_MESSAGE_TYPE_SCONTR": "Task imported from the carrier",
