--- a/js/app/i18n/locales/en.json
+++ b/js/app/i18n/locales/en.json
@@ -38,6 +38,7 @@
         "DEPRECATED": "Deprecated",
         "VIEW_DOCUMENTATION": "View documentation",
         "FEATURE_PREVIEW_HELP": "The feature is available for demonstration and test purposes but may not be documented and/or feature complete. Please contact us on Slack #dev channel if you have any questions or feedback.",
+        "LOADING": "Loading...",
         "ADMIN_DEFAULT_DELETION_ERROR_MESSAGE": "Could not delete",
         "ADMIN_PLEASE_UNLINK_PACKAGE_SET_BEFORE_DELETION": "Could not delete. Please unlink this package set from stores or delivery forms it may apply",
         "ADMIN_PLEASE_UNLINK_PRICING_RULE_SET_BEFORE_DELETION": "Could not delete. Please unlink this pricing from stores, restaurants or delivery forms it may apply",
@@ -289,6 +290,7 @@
         "RULE_PICKER_LINE_PACKAGES_TARGET_DELIVERY": "Packages (total)",
         "RULE_PICKER_LINE_PACKAGES_TARGET_TASK": "Packages (use only with Type of task: Dropoff)",
         "RULE_PICKER_LINE_ORDER_ITEMS_TOTAL": "Food Tech Order Items total",
+        "RULE_PICKER_LINE_TIME_SLOT": "Time slot",
         "RULE_PICKER_LINE_OPTGROUP_DELIVERY": "Delivery",
         "RULE_PICKER_LINE_OPTGROUP_DEPRECATED": "Deprecated",
         "ORDER_LIST_STATE": "State",
